# challenge_one

./: CMakeLists.txt  challenge_one  challenge_one.cpp  first_challenge_lis
include/lis-2.1.6/: Makefile  config.status  libtool
include/lis-2.1.6/include/: Makefile
include/lis-2.1.6/src/: Makefile  liblis.la
include/lis-2.1.6/src/.libs/: liblis.lai  liblis.so.0  liblis.so.0.0.0
include/lis-2.1.6/src/array/: Makefile  lis_array.lo
include/lis-2.1.6/src/esolver/: Makefile  lis_esolver.lo  lis_esolver_ai.lo  lis_esolver_cg.lo  lis_esolver_ii.lo  lis_esolver_li.lo  lis_esolver_pi.lo  lis_esolver_rqi.lo  lis_esolver_si.lo
include/lis-2.1.6/src/fortran/: Makefile
include/lis-2.1.6/src/matrix/: Makefile  lis_matrix.lo  lis_matrix_bsc.lo  lis_matrix_bsr.lo  lis_matrix_coo.lo  lis_matrix_csc.lo  lis_matrix_csr.lo  lis_matrix_dia.lo  lis_matrix_diag.lo  lis_matrix_dns.lo  lis_matrix_ell.lo  lis_matrix_ilu.lo  lis_matrix_jad.lo  lis_matrix_mpi.lo  lis_matrix_msr.lo  lis_matrix_ops.lo  lis_matrix_rco.lo  lis_matrix_vbr.lo
include/lis-2.1.6/src/matvec/: Makefile  lis_matvec.lo  lis_matvec_bsc.lo  lis_matvec_bsr.lo  lis_matvec_coo.lo  lis_matvec_csc.lo  lis_matvec_csr.lo  lis_matvec_dia.lo  lis_matvec_dns.lo  (+4 more)
include/lis-2.1.6/test/: Makefile  esolve  esolver  etest1  etest2  etest3  etest4  etest5  etest5b  etest6  etest7  gesolve  gesolver  getest1  getest5  getest5b  hpcg_kernel  hpcg_spmvtest  lsolve  spmvtest1  spmvtest2  spmvtest2b  spmvtest3  spmvtest3b  spmvtest4  spmvtest5  test1  test2  test2b  test3  test3b  test3c  test4  test5  test6  test7
(+79 files in other folders)
